src/cfn/streamlit-app-alb.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "CloudFormation Template for web hosting on EC2 with ALB"

# If you run this template using CLI, please replace the default values with a placeholder [...]

Parameters:

  EC2InstanceType:
    Description: "EC2 instance type"
    Type: String
    Default: t3a.small
    # Examples only, adjust as required
    AllowedValues:
      - t3a.small
      - m5.large
      - c5.xlarge
      - r5.large
      - g4dn.xlarge

  EC2ImageId:
    Description: "AMI ID for the EC2 instance"
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    # The EC2 instance is to be created with an image in the same region where the stack runs

  S3BucketName:
    Description: "The name of the S3 bucket containing the application ZIP file to deploy"
    Type: String
    Default: [deployment_s3_bucket]

  S3Key:
    Description: "The S3 key (path) of the ZIP file to deploy, e.g., src/streamlit/app.zip"
    Type: String
    Default: [deployment_s3_zip_file_path]

  VPCId:
    Description: "VPC ID"
    Type: AWS::EC2::VPC::Id
    Default: [vpc_id]

  EC2SubnetId:
    Description: "Subnet ID for EC2, e.g., subnet-abc123"
    Type: AWS::EC2::Subnet::Id
    Default: [ec2_subnet_id]

  ALBSubnetIds:
    Description: "List of subnet IDs for ALB, e.g., subnet-abc123,subnet-def456,subnet-ghi789"
    Type: List<AWS::EC2::Subnet::Id>
    Default: [subnet_id_list]

  EC2OpenAccess:
    Description: "Whether to enable open access to the EC2 instance for testing"
    Type: String
    AllowedValues: ["true", "false"]
    Default: "false"

  AppPort:
    Description: "Port number for the application, e.g., 8501"
    Type: Number
    Default: 80

  TimeZone:
    Description: "Time zone for the EC2 instance"
    Type: String
    Default: [your_time_zone]

  # Optional - If you are not using a key pair, leave this value empty.
  # You can always connect to the EC2 instance via the AWS Console.
  KeyName:
    Description: "Name of an existing EC2 KeyPair to enable SSH access"
    Type: String
    Default: ""


########################################################
#
# Custom domain parameters (optional)
#   If you are using a custome domain, define all three values in this section.
#   Otherwise, leave all values empty.
#
  CustomDomain:
    Description: "The custom domain name (e.g., app.example.com)"
    Type: String
    Default: ""

  HostedZoneId:
    Description: "Route53 Hosted Zone ID for the domain"
    Type: String
    Default: ""
\
  ACMCertificateArn:
    Description: "The ACM Certificate for the custom domain name in the same region, e.g., arn:aws:acm:[region]:[aws_account]:certificate/[certificate_id]"
    Type: String
    Default: ""
    # The ACM Certificate needs to be created in the same region where the stack runs
#
########################################################


# ########################################################
# #
# # ALB specific (optional)
# #   The ALB client can pass a custom header such as "X-Client-Secret"
# #   to the EC2 origin as a way to "authenticate" the request, such that
# #   the EC2 backend app can check whether the request is from the client.
# #   If you do not want to pass a custom header, leave the value empty.
# #
#   SecretHeader:
#     Description: "A secret header to be passed to the EC2 backend app"
#     Type: String
#     Default: "X-Client-Secret"

#   SecretValue:
#     Description: "A secret value to be passed to the EC2 backend app"
#     Type: String
#     Default: "secret-value"
# #
# ########################################################


Conditions:

  UseKeyName: !Not
    - !Equals [!Ref KeyName, ""]

  UseCustomDomain: !Not
    - !Equals [!Ref CustomDomain, ""]

  NotUseCustomDomain: !Not
    - Condition: UseCustomDomain

  AllowEC2OpenAccess: !Equals [!Ref EC2OpenAccess, "true"]

  NotAllowEC2OpenAccess: !Not
    - Condition: AllowEC2OpenAccess

Resources:

########################################################
#
# EC2
#

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: S3AccessPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject
                Resource:
                  - !Sub "arn:aws:s3:::${S3BucketName}/${S3Key}"

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2Role

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP and SSH"
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  EC2AllowALBIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: NotAllowEC2OpenAccess
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: tcp
      FromPort: !Ref AppPort
      ToPort: !Ref AppPort
      SourceSecurityGroupId: !Ref ALBSecurityGroup

  EC2AllowPublicIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: AllowEC2OpenAccess
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: tcp
      FromPort: !Ref AppPort
      ToPort: !Ref AppPort
      CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref EC2InstanceType
      ImageId: !Ref EC2ImageId
      IamInstanceProfile: !Ref EC2InstanceProfile
      KeyName:
          Fn::If:
            - UseKeyName
            - !Ref KeyName
            - !Ref AWS::NoValue
      VpcId: !Ref VPCId
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref EC2SubnetId
          GroupSet:
            - !Ref EC2SecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 30
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}"
      UserData:
        # This script runs at first boot only.
        # This example is to install a streamlit-app service.
        Fn::Base64: !Sub |
          #!/bin/bash
          set -e  # Exit on any error
          (
            # Initialisation
            date
            yum update -y
            yum install -y unzip aws-cli
            yum install python -y
            yum install python-pip -y
            timedatectl set-timezone ${TimeZone}

            # Prepare the running environment
            mkdir -p /home/ec2-user/streamlit-app
            echo S3BucketName=${S3BucketName} > /home/ec2-user/streamlit-app/app.conf
            echo S3Key=${S3Key} >> /home/ec2-user/streamlit-app/app.conf
            echo AppPort=${AppPort} >> /home/ec2-user/streamlit-app/app.conf
            chown -R ec2-user:ec2-user /home/ec2-user/streamlit-app

            # Download and unpack the application ZIP file
            aws s3 cp s3://${S3BucketName}/${S3Key} /home/ec2-user/streamlit-app/app.zip
            test -d /opt/streamlit-app && rm -fr /opt/streamlit-app
            mkdir -p /opt/streamlit-app
            unzip /home/ec2-user/streamlit-app/app.zip -d /opt/streamlit-app
            chmod +x /opt/streamlit-app/streamlit_app.sh
            chown -R ec2-user:ec2-user /opt/streamlit-app

            # Create the Streamlit config file
            mkdir -p /home/ec2-user/.streamlit
            cat << EOF > /home/ec2-user/.streamlit/config.toml
          [server]
          enableCORS = false
          EOF
            chown -R ec2-user:ec2-user /home/ec2-user/.streamlit

            # Create the log file
            touch /var/log/streamlit-app.log
            chown ec2-user:ec2-user /var/log/streamlit-app.log

            # Create a systemd service to run the application
            cat << EOF > /etc/systemd/system/streamlit-app.service
          [Unit]
          Description=Run the application continuously
          After=network.target

          [Service]
          ExecStart=/opt/streamlit-app/streamlit_app.sh
          Type=simple
          Restart=always
          RestartSec=5
          User=ec2-user
          WorkingDirectory=/opt/streamlit-app

          [Install]
          WantedBy=multi-user.target
          EOF
            systemctl daemon-reload
            systemctl enable streamlit-app
            systemctl start streamlit-app

            echo "EC2 instance is ready"
          ) >> /var/log/ec2-userdata.log 2>&1


########################################################
#
# ALB
#

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP/S traffic to ALB
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: Streamlit-ALB
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: !Ref ALBSubnetIds

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPCId
      Protocol: HTTP
      Port: !Ref AppPort
      TargetType: instance
      Targets:
        - Id: !Ref EC2Instance
      HealthCheckProtocol: HTTP
      HealthCheckPort: traffic-port
      HealthCheckPath: /

  ##############################
  #  NotUseCustomDomain
  #   If you add a custom domain *after* the stack is created,
  #   you may find an error: A listener already exists on this port.
  #   To solve this problem, before adding the custom domain,
  #   first comment out this block and update the stack,
  #   then add the custom domain parameters and update again.
  ALBListenerHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: NotUseCustomDomain
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ALBTargetGroup
            TargetGroupStickinessConfig:
                DurationSeconds: 300 # 5 minutes, adjust as required
                Enabled: true
            # ModifyRequestHeaders:
            #   - Header: !Ref SecretHeader
            #     Value: !Ref SecretValue
            #     Action: "ADD"
  #
  ##############################

  ##############################
  #  UseCustomDomain
  ALBListenerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: UseCustomDomain
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-2016-08
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ALBTargetGroup
            TargetGroupStickinessConfig:
                DurationSeconds: 300 # 5 minutes, adjust as required
                Enabled: true
            # ModifyRequestHeaders:
            #   - Header: !Ref SecretHeader
            #     Value: !Ref SecretValue
            #     Action: "ADD"
      Certificates:
        - CertificateArn: !Ref ACMCertificateArn

  ALBListenerHTTPRedirectToHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: UseCustomDomain
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: 443
            StatusCode: HTTP_301

  Route53Record:
    Type: AWS::Route53::RecordSet
    Condition: UseCustomDomain
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref CustomDomain
      Type: A
      AliasTarget:
        DNSName: !GetAtt ApplicationLoadBalancer.DNSName
        HostedZoneId: !GetAtt ApplicationLoadBalancer.CanonicalHostedZoneID
  #
  ##############################

Outputs:

  ALBURL:
    Description: "URL (HTTP only) of the ALB"
    Value: !Sub "http://${ApplicationLoadBalancer.DNSName}"

  CustomURL:
    Condition: UseCustomDomain
    Description: "URL of the custom domain"
    Value: !Sub "https://${CustomDomain}"

  EC2BackendAppURL:
    Condition: AllowEC2OpenAccess
    Description: "URL of the backend application (for testing)"
    Value: !Sub "http://${EC2Instance.PublicDnsName}:${AppPort}"
